--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -76,7 +76,9 @@
         <service android:name=".swiftp.WifiStateChangeReceiver$StopServerService" />
 
         <activity android:name=".HideHeadTestActivity" />
-        <activity android:name=".DragToLoadActivity"></activity>
+        <activity android:name=".DragToLoadActivity" />
+        <activity android:name=".BindingActivity" />
+        <activity android:name=".ChartActivity"></activity>
     </application>
 
 </manifest>
