--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,8 +1,8 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 24
-    buildToolsVersion '25.0.0'
+    compileSdkVersion 26
+    buildToolsVersion '26.0.2'
     dataBinding {
         enabled true
     }
@@ -12,6 +12,19 @@ android {
         targetSdkVersion 24
         versionCode 1
         versionName "1.0"
+
+        ndk {
+            abiFilters 'armeabi-v7a', 'arm64-v8a', 'x86', 'x86_64'
+            // these platforms cover 99% percent of all Android devices
+        }
+
+        externalNativeBuild {
+            cmake {
+                arguments '-DANDROID_PLATFORM=android-23', '-DANDROID_TOOLCHAIN=gcc', '-DANDROID_ARM_NEON=TRUE', '-DANDROID_STL=gnustl_static'
+                cFlags "-std=c99", '-fsigned-char' // full optimization, char data type is signed
+                cppFlags '-fsigned-char', "-std=c++11"
+            }
+        }
 
 //        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
@@ -27,6 +40,12 @@ android {
         abortOnError false
     }
 
+    externalNativeBuild {
+        cmake {
+            path "CMakeLists.txt"
+        }
+    }
+
 
 }
 
@@ -39,11 +58,11 @@ dependencies {
     // Because RxAndroid releases are few and far between, it is recommended you also
 // explicitly depend on RxJava's latest version for bug fixes and new features.
 
-    compile 'com.android.support:appcompat-v7:+'
-    compile 'com.android.support:support-v4:24.0.0'
+    compile 'com.android.support:appcompat-v7:26.1.0'
+    compile 'com.android.support:support-v4:26.0.0'
     compile 'com.android.support.constraint:constraint-layout:1.0.0-alpha9'
     compile 'com.github.bumptech.glide:glide:3.8.0'
-    compile 'com.android.support:recyclerview-v7:24.+'
+    compile 'com.android.support:recyclerview-v7:26.+'
     compile 'com.squareup.okhttp3:okhttp:3.8.0'
     compile 'com.squareup.retrofit2:retrofit:2.3.0'
     compile 'com.squareup.retrofit2:converter-gson:2.3.0'
@@ -51,7 +70,6 @@ dependencies {
     compile 'io.reactivex.rxjava2:rxjava:2.0.7'
     compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
     compile 'com.jakewharton.rxbinding2:rxbinding:2.0.0'
-    compile 'com.android.support:recyclerview-v7:+'
     compile 'net.vrallev.android:cat:1.0.2'
     testCompile 'junit:junit:4.12'
     compile 'com.tencent.mm.opensdk:wechat-sdk-android-with-mta:+'
