--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'kotlin-android'
 
 android {
     compileSdkVersion 26
@@ -73,4 +74,10 @@ dependencies {
     compile 'net.vrallev.android:cat:1.0.2'
     testCompile 'junit:junit:4.12'
     compile 'com.tencent.mm.opensdk:wechat-sdk-android-with-mta:+'
+    compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
 }
+repositories {
+    mavenCentral()
+}
+
+apply plugin: 'kotlin-android-extensions'
