--- a/gradle.properties
+++ b/gradle.properties
@@ -11,6 +11,8 @@
 # The setting is particularly useful for tweaking memory settings.
 org.gradle.jvmargs=-Xmx1536m
 
+android.useAndroidX=true
+
 
 
 # When configured, Gradle will run in incubating parallel mode.
